fix header center alignment for widescreen

--- a/pyxiv/static/style.scss
+++ b/pyxiv/static/style.scss
@@ -292,6 +292,7 @@ header {
     justify-content: space-between;
     width: 100%;
     max-width: 1600px;
+    margin: auto;
   }
 
   .main,
